# todolist

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-ci.yaml  docker-compose.yaml  pyproject.toml  test.py
.github/workflows/: action.yaml  actions.yaml
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_createuser_updatepassword_alter_user_email_and_more.py
core/migrations1/: 0001_initial.py
deploy/: .env  docker-compose.yaml
deploy/pg_data/base/1/: 2619  (+1 more)
deploy/pg_data/global/: 1260  1262  2671  pg_control  pg_internal.init
deploy/pg_data/pg_stat/: pgstat.stat
goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_goal.py  0003_goalcomment.py  0004_board_goalcategory_board_boardparticipant.py  0005_create_new_objects.py  0006_alter_goalcategory_board.py
pg_data/: postmaster.pid
pg_data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
pg_data/base/16384/: 1249  16391  16397  16399  16405  16411  16421  16442  16469  16470  16484  16496  16524  2608  2619  2658  pg_internal.init
pg_data/base/5/: 1247  1249  1259  16384  16385  16388  16389  16390  16392  16393  16394  16396  16397  16398  16400  16401  16402  16404  16405  16408  16410  16414  16416  16418  16420  16424  16427  16431  16432  16445  16446  16450  16452  16454  16455  16456  16460  16462  16464  16466  (+46 more)
pg_data/global/: 1260  1262  pg_control  pg_internal.init
pg_data/pg_stat/: pgstat.stat
todolist/: settings.py  urls.py
(+2 files in other folders)
